Fix styles on flat and collapsed section

--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -135,7 +135,8 @@ ul.pagination {
   }
 
   > a,
-  > span {
+  > span,
+  > label {
     font-weight: bolder;
   }
 
